<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint_layout1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegisterTitle"
            android:textColor="#000"
            android:hint="@string/register_text"
            android:textSize="20sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias=".2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvFirstName"
            android:textSize="17sp"
            android:paddingLeft="20dp"
            android:text="@string/first_name"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout1"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvFirstName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvFamilyName"
            android:id="@+id/layout1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/tbFirstName"
                android:background="@color/light_yellow"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvFamilyName"
            android:hint="@string/family_name"
            android:paddingLeft="20dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/layout1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout2"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFamilyName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvEmail"
            android:id="@+id/layout2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/tbFamilyName"
                android:background="@color/light_yellow"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail"
            android:hint="@string/email"
            android:paddingLeft="20dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/layout2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout3"
            app:layout_constraintVertical_bias=".2" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvPassword"
            android:id="@+id/layout3">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/tbEmail"
                android:background="@color/light_yellow"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvPassword"
            android:hint="@string/password"
            android:paddingLeft="20dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/layout3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout4"
            app:layout_constraintVertical_bias=".2" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvDOB"
            android:id="@+id/layout4"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/tbPassword"
                android:background="@color/light_yellow"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDOB"
            android:hint="@string/dob"
            android:paddingLeft="20dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/layout4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout5"
            app:layout_constraintVertical_bias=".2" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvDOB"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            android:id="@+id/layout5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/tbDOB"
                android:background="@color/light_yellow"/>

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="register_user"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/button_register"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout5"
        android:backgroundTint="@color/bee_launcher_background"/>


    </androidx.constraintlayout.widget.ConstraintLayout>